--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@
       margin-right: 0 !important;
     }
   }
-  @media screen and (max-height: 550px) and (not (-webkit-min-device-pixel-ratio: 2)) {
+  @media screen and (max-height: 550px) {
     :root {
       --s18: 25px;
       --s20: 25px;
@@ -149,6 +149,125 @@
     }
   }
   @media screen and (max-width: 376px) {
+    :root {
+      --s18: 16px;
+    }
+  }
+  @media screen and (max-width: 1534px) and ((-webkit-min-device-pixel-ratio: 2)) {
+    :root {
+      --s18: 25px;
+      --s20: 20px;
+      --s30: 30px;
+      --s40: 40px;
+    }
+    header {
+      display: none !important;
+    }
+    .mobile-header {
+      display: flex !important;
+    }
+    .pop-up-alert {
+      display: none !important;
+    }
+    .main {
+      display: none !important;
+    }
+    .main-phone {
+      display: flex !important;
+    }
+    .main-phone .buttons {
+      margin-top: 2vh !important;
+      margin-left: auto;
+      margin-right: auto;
+      width: 80vw !important;
+    }
+    .btn-purple {
+      width: 100% !important;
+      height: 8vh !important;
+      border-radius: 10px !important;
+    }
+    .instruction {
+      display: none !important;
+    }
+    h1 {
+      margin-bottom: 3vh !important;
+      margin-top: 3vh !important;
+    }
+    .link {
+      flex-direction: column;
+      width: 90vw !important;
+      justify-content: space-between !important;
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: 2vh;
+    }
+    .link button {
+      width: 40vw !important;
+      margin-top: 2vh !important;
+      margin-bottom: 5vh !important;
+      margin-right: 0 !important;
+    }
+  }
+  @media screen and (max-height: 1100px) and ((-webkit-min-device-pixel-ratio: 2)) {
+    :root {
+      --s18: 25px;
+      --s20: 25px;
+    }
+    header img {
+      height: 10vh !important;
+    }
+    .mobile-header {
+      height: 20vh !important;
+    }
+    .mobile-header img {
+      height: 10vh !important;
+    }
+    .main img {
+      height: 80vh !important;
+    }
+    .main img, .main b {
+      margin-right: 5vw !important;
+    }
+    .btn-purple {
+      height: 15vh !important;
+    }
+    .link {
+      margin-top: 10vh !important;
+    }
+    .link button {
+      width: 30vw !important;
+    }
+    .link button, .link div {
+      height: 15vh !important;
+    }
+    .collapse .collapse-menu button, .collapsing .collapse-menu button {
+      width: 65vw !important;
+      height: 15vh !important;
+    }
+    .collapse .collapse-menu button img, .collapsing .collapse-menu button img {
+      height: 8vh !important;
+    }
+  }
+  @media screen and (max-height: 1100px) and (min-width: 1534px) and ((-webkit-min-device-pixel-ratio: 2)) {
+    .link button {
+      width: 15vw !important;
+    }
+  }
+  @media screen and (max-width: 1000px) and ((-webkit-min-device-pixel-ratio: 2)) {
+    :root {
+      --s14: 14px;
+      --s16: 16px;
+      --s18: 20px;
+      --s20: 18px;
+      --s30: 30px;
+      --s40: 30px;
+      --s50: 20px;
+    }
+    .collapse .collapse-menu button, .collapsing .collapse-menu button {
+      width: 75vw !important;
+    }
+  }
+  @media screen and (max-width: 752px) and ((-webkit-min-device-pixel-ratio: 2)) {
     :root {
       --s18: 16px;
     }
